--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-
-stage('Install Dependencies') {
-    steps {
-        // Crea y activa un entorno virtual de Python e instala dependencias
-        sh 'python3 -m venv venv'
-        sh '. venv/bin/activate && pip install -r requirements.txt && pip install pylint'
-    }
-}
+flask
+pytest
+pylint
